--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,4 @@
-.grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    background-color: rgb(240 240 240);
-    max-width: 900px;
-    margin: 0 auto;
+* {
+    margin: 0;
+    padding: 0;
 }
-
-
-.teste {
-    font-weight: bold;
-}
-    
